--- a/src/Components/shop/carrito/CartTable.module.css
+++ b/src/Components/shop/carrito/CartTable.module.css
@@ -5,6 +5,22 @@
   background-color: white;
 }
 
+.emptyCart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 40vh;
+  text-align: center;
+  color: #444;
+  gap: 1rem;
+}
+
+.emptyCartImage {
+  width: 200px;
+  opacity: 0.8;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
