--- a/src/Components/landing/Libro_reclamaciones/FormLibro.module.css
+++ b/src/Components/landing/Libro_reclamaciones/FormLibro.module.css
@@ -226,3 +226,7 @@
   padding: 10px;
   color: var(--white-color);
 }
+.btnPrimary:disabled {
+  background-color: var(--gray-color);
+  cursor: not-allowed;
+}
