--- a/src/Components/landing/Contactenos/FormContactenos.module.css
+++ b/src/Components/landing/Contactenos/FormContactenos.module.css
@@ -22,7 +22,7 @@
 .inputGroup {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 30px;
   width: 100%;
   margin: 20px 0;
   position: relative;
@@ -65,8 +65,10 @@
 .inputWrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  align-items: flex-start;
+  gap: 6px;
   width: 100%;
+  position: relative;
 }
 
 .inputWrapper label {
@@ -179,7 +181,7 @@
   align-items: flex-start;
   justify-content: center;
   gap: 8px;
-  margin-top: 20px;
+  margin-top: 40px;
   
 }
 
@@ -197,7 +199,7 @@
   text-decoration: none;
   font-weight: 600;
 }
-.termsBox button {
+.btnPrimary {
   margin-left: auto;
   margin-bottom: 20px;
   background-color: var(--primary-color);
@@ -210,3 +212,8 @@
   padding: 10px;
   color: var(--white-color);
 }
+.btnPrimary:disabled {
+  background-color: var(--gray-color);
+  cursor: not-allowed;
+}
+
