--- a/src/Components/footer/Footer.module.css
+++ b/src/Components/footer/Footer.module.css
@@ -22,7 +22,6 @@
 .columna {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: flex-start;
   align-content: stretch;
@@ -83,8 +82,21 @@
   font-family: Poppins;
   font-weight: 400;
   font-style: Regular;
-  font-size: 14px;
+  font-size: 1rem;
   line-height: 36px;
   letter-spacing: 0%;
   text-align: center;
+}
+@media (max-width: 768px) {
+  .contenedor {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .columna {
+    align-items: center;
+    text-align: center;
+  }
+
 }
