--- a/src/Components/buttons/ButtonPrimary.module.css
+++ b/src/Components/buttons/ButtonPrimary.module.css
@@ -22,3 +22,8 @@
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
 }
+@media (max-width: 768px) {
+  .btn {
+    font-size: 12px;
+    padding: 12px 10px;
+  }}
