--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,10 +1,4 @@
 #root {
-  margin: 0 auto;
-  text-align: center;
-}
-.Container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 20px;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
 }
