--- a/src/Pages/cart/producto/Producto.module.css
+++ b/src/Pages/cart/producto/Producto.module.css
@@ -30,7 +30,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-style: SemiBold;
-  font-size: 36px;
+  font-size: 1.9rem;
   line-height: 60px;
 }
 
@@ -43,7 +43,7 @@
 
 .categoria {
   margin: 20px 0;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .cantidadContainer button {
@@ -107,16 +107,52 @@ button.addToCartButton {
   margin-bottom: 10px;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 1.5rem;
   line-height: 36px;
   text-align: left;
 }
 
 .categoriaImagen {
   width: 100%;
+  height: 200px;
+  object-fit: contain;
 }
 
 .usosContainer {
   margin: 30px 0;
   text-align: left;
+  font-size: 1rem;
+}
+/*TABLETS*/
+@media (min-width: 768px) {
+}
+/*CELULARES*/
+@media (min-width: 320px) {
+  .banner {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .bannerLeft {
+    width: 100%;
+    height: 320px;
+  }
+  .productoContainer {
+    padding: 0;
+    margin: 0 auto;
+    width: 80%;
+  }
+  .cantidadContainer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px ;
+
+  }
+  .cantidadContainer input{
+    width: 2.5rem;
+  }
+  button.addToCartButton {
+    margin-left: 0;
+  }
 }
