--- a/src/Components/dropdown/DropdownProfile.module.css
+++ b/src/Components/dropdown/DropdownProfile.module.css
@@ -97,3 +97,53 @@
   background-color: var(--primary-color);
   color: white;
 }
+/* 🔹 Tablets (pantallas medianas) */
+@media (max-width: 992px) {
+.dropdownButton {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  background-color: white;
+  border: 1px solid #e2e8f0;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "Montserrat", sans-serif;
+  text-transform: capitalize;
+}
+}
+
+/* 🔹 Celulares grandes */
+@media (max-width: 768px) {
+.dropdownButton {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  background-color: white;
+  border: 1px solid #e2e8f0;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "Montserrat", sans-serif;
+  text-transform: capitalize;
+}
+}
+
+/* 🔹 Celulares pequeños */
+@media (max-width: 480px) {
+.dropdownButton {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  padding: 0.4rem 0.7rem;
+  border-radius: 0.5rem;
+  background-color: white;
+  border: 1px solid #e2e8f0;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "Montserrat", sans-serif;
+  text-transform: capitalize;
+}
+}
