--- a/src/Components/footer/Footer.module.css
+++ b/src/Components/footer/Footer.module.css
@@ -86,6 +86,7 @@
   line-height: 36px;
   letter-spacing: 0%;
   text-align: center;
+  margin: 5px 20px;
 }
 @media (max-width: 768px) {
   .contenedor {
