--- a/src/Components/navbar/Navbar.module.css
+++ b/src/Components/navbar/Navbar.module.css
@@ -74,13 +74,18 @@
 }
 
 /* ======== 🔹 RESPONSIVE ======== */
-/* Móvil */
-@media (max-width: 768px) {
-  .navbar {
-    padding: 24px 20px;
+
+/* Desktop */
+@media (min-width: 769px) {
+  .menuIcon {
+    display: none;
   }
+}
+/* 🔹 Tablets (pantallas medianas) */
+@media (max-width: 992px) {
 
   .menuIcon {
+    width: 25px;
     display: block;
     cursor: pointer;
     font-size: 28px;
@@ -105,6 +110,7 @@
 
   .links.active {
     display: flex;
+    top: 100px;
   }
   .logo {
     width: 8rem;
@@ -126,9 +132,108 @@
   }
 }
 
-/* Desktop */
-@media (min-width: 769px) {
+/* 🔹 Celulares grandes */
+@media (max-width: 768px) {
+
   .menuIcon {
+    width: 25px;
+    display: block;
+    cursor: pointer;
+    font-size: 28px;
+    user-select: none;
+  }
+
+  .links {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    gap: 20px;
+    padding: 20px 0;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+    border-top: 1px solid #eee;
+  }
+
+  .links.active {
+    display: flex;
+    top: 100px;
+  }
+  .logo {
+    width: 8rem;
+  }
+
+  .dropdown:hover .dropdownContent {
+    display: flex;
+  }
+  .dropdownContent {
+    flex-direction: column;
+    position: static;
+    box-shadow: none;
+    padding: 0;
+  }
+
+  .userSection {
+    font-size: 12px;
+    order: 3;
   }
 }
+
+/* 🔹 Celulares pequeños */
+@media (max-width: 480px) {
+  .navbar {
+    padding: 0.8rem 0.5rem;
+  }
+
+  .menuIcon {
+    width: 25px;
+    display: block;
+    cursor: pointer;
+    font-size: 28px;
+    user-select: none;
+  }
+
+  .links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    gap: 20px;
+    padding: 20px 0;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+    border-top: 1px solid #eee;
+  }
+
+  .links.active {
+    display: flex;
+    top: 80px;
+  }
+  .logo {
+    width: 8rem;
+  }
+
+  .dropdown:hover .dropdownContent {
+    display: flex;
+  }
+  .dropdownContent {
+    flex-direction: column;
+    position: static;
+    box-shadow: none;
+    padding: 0;
+  }
+
+  .userSection {
+    font-size: 12px;
+    order: 3;
+  }
+}
+
