--- a/src/Pages/cart/checkout/Checkout.module.css
+++ b/src/Pages/cart/checkout/Checkout.module.css
@@ -55,6 +55,7 @@
 
 .inputRow {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 .inputWrapper {
@@ -81,27 +82,6 @@
   font-family: "Montserrat", sans-serif;
 }
 
-.select {
-  flex: 1;
-  padding: 10px;
-  border: 1px solid #d0d0d0;
-  border-radius: 6px;
-  font-size: 14px;
-  background-color: #fff;
-  color: #333;
-  cursor: pointer;
-  font-family: "Montserrat", sans-serif;
-}
-
-.select:focus {
-  border-color: #ff1e44;
-  box-shadow: 0 0 5px rgba(255, 30, 68, 0.3);
-  outline: none;
-}
-
-.select option {
-  color: #333;
-}
 
 .textarea {
   text-align: left;
@@ -159,4 +139,9 @@
 .button:disabled {
   background-color: var(--gray-color);
   cursor: not-allowed;
+}
+@media (max-width: 425px) {
+  .formContainer {
+    width: 80%;
+  }
 }
