--- a/src/Pages/profile/cotizacion/Cotizacion.module.css
+++ b/src/Pages/profile/cotizacion/Cotizacion.module.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
   align-content: stretch;
@@ -143,4 +143,14 @@
   display: flex;
   justify-content: center;
   margin-bottom: 40px;
+}
+@media  (max-width:768px) {
+  .content {
+    flex-direction: column;
+    padding: 16px 30px;
+  }
+  .left, .right {
+    width: 100%;
+  }
+  
 }
