--- a/src/Pages/profile/profile/Profile.module.css
+++ b/src/Pages/profile/profile/Profile.module.css
@@ -1,12 +1,12 @@
 .content {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-between;
   align-items: flex-start;
   align-content: stretch;
-  margin: 40px 0;
-  padding: 16px 140px;
+  margin: 40px auto;
+  width:90%;
+  gap: 20px;
 }
 
 .left {
@@ -109,4 +109,26 @@
 .tableContainer {
   margin-top: 20px;
   width: 100%;
+}
+@media (max-width: 425px) {
+  .content {
+    width: 100%;
+    flex-direction: column;
+    justify-items: center;
+  }
+  .left {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .right {
+    width: 70%;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .personal {
+    padding: 20px;
+    gap: 7px;
+  }
 }
