--- a/src/Pages/dashboard/layout/Layout.module.css
+++ b/src/Pages/dashboard/layout/Layout.module.css
@@ -10,3 +10,12 @@
   background: #f5f6fa;
   overflow-y: auto;
 }
+@media (max-width: 992px) {
+    .layout {
+    flex-direction: column;
+  }
+
+  .content {
+    padding: 16px;
+  }
+}
