--- a/src/Pages/dashboard/mensajes/Mensajes.module.css
+++ b/src/Pages/dashboard/mensajes/Mensajes.module.css
@@ -84,3 +84,34 @@
   filter: brightness(0) saturate(100%) invert(26%) sepia(96%) saturate(2838%)
     hue-rotate(338deg) brightness(98%) contrast(101%);
 }
+/* ====== RESPONSIVE ====== */
+@media (max-width: 768px) {
+  .dashboardHeader{
+  flex-direction: column;
+  gap: 20px;
+}
+  .searchBarContainer{
+    width: 440px;
+  }
+}
+@media (max-width: 425px) {
+.dashboardHeader{
+  flex-direction: column;
+  gap: 20px;
+}
+.searchBarContainer{
+  order: 1;
+  width: 100%;
+}
+.tableContainer{
+  margin: 0;
+}
+.totalProducts{
+  padding: 8px;
+}
+.headerActions{
+  flex-direction: column;
+  width: 100%;
+  align-items: stretch;
+}
+}
