--- a/src/Pages/dashboard/perfil/DashboardPerfil.module.css
+++ b/src/Pages/dashboard/perfil/DashboardPerfil.module.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
   align-content: stretch;
@@ -174,4 +174,19 @@
 
 .buttonWrapper {
   width: 48%;
+}
+/* ====== RESPONSIVE ====== */
+@media (max-width: 992px) {
+  .content{
+    padding: 0;
+  }
+  .left{
+    width: 100%;
+  }
+  .right{
+    width: 100%;
+  }
+  .personal{
+    height: auto;
+  }
 }
