styles: Modifying some components to adapt to responsive design

--- a/src/Components/dashboard/productlistcard/ProductListCard.module.css
+++ b/src/Components/dashboard/productlistcard/ProductListCard.module.css
@@ -56,3 +56,9 @@
   font-size: 14px;
   color: var(--primary-color);
 }
+/* ====== RESPONSIVE ====== */
+@media (max-width: 992px) {
+  .productItem {
+    flex-direction: column;
+  }
+}
