--- a/src/Components/dashboard/searchbar/SearchBar.module.css
+++ b/src/Components/dashboard/searchbar/SearchBar.module.css
@@ -83,3 +83,11 @@
   font-size: 0.75rem;
   color: #999;
 }
+@media (max-width: 992px) {
+  .searchContainer {
+    width: 100%;
+  }
+  .searchWrapper{
+    display: flex;
+  }
+}
