--- a/src/Components/dashboard/sidebar/SideBarDashboard.module.css
+++ b/src/Components/dashboard/sidebar/SideBarDashboard.module.css
@@ -127,14 +127,15 @@
   display: block;
   width: 26px;
   height: 3px;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   margin: 4px 0;
   border-radius: 2px;
   transition: 0.3s;
 }
-.open{
+.open {
   .hamburgerLine:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
+    background-color: var(--white-color);
   }
 
   .hamburgerLine:nth-child(2) {
@@ -142,6 +143,7 @@
   }
 
   .hamburgerLine:nth-child(3) {
+    background-color: var(--white-color);
     transform: rotate(-45deg) translate(5px, -5px);
   }
 }
@@ -164,7 +166,7 @@
     top: 0;
     left: -100%;
     height: 100vh;
-    width: 240px;
+    width: 70%;
     background-color: var(--secondary-color);
     flex-direction: column;
     padding: 2rem 1rem;
