--- a/src/Components/dashboard/Modals/Mensajes/ModalMensajes.module.css
+++ b/src/Components/dashboard/Modals/Mensajes/ModalMensajes.module.css
@@ -80,3 +80,11 @@
   background-size: 14px;
   cursor: pointer;
 }
+@media (max-width:425px) {
+  .modalContent {
+    margin: 10px;
+  }
+  .modalActions{
+    flex-direction: column;
+  }
+}
