--- a/src/Components/dashboard/Modals/Producto/ModalProductoEdit.module.css
+++ b/src/Components/dashboard/Modals/Producto/ModalProductoEdit.module.css
@@ -69,6 +69,7 @@
 .formRow {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 0px 60px;
   gap: 3rem;
   align-items: start;
@@ -91,6 +92,7 @@
   flex: 2;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   gap: 1.5rem;
 }
 
@@ -269,4 +271,65 @@
   background-position: right 1rem center;
   background-size: 16px;
   cursor: pointer;
+}
+/*RESPONSIVE*/
+@media (max-width: 768px) {
+  .dropZone {
+    width: 40%;
+    height: 40%;
+  }
+  .modalOverlay {
+    overflow-y: auto;
+    gap: 20px;
+  }
+  .imagenSection {
+    flex: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .modalContent {
+    width: 100%;
+    padding: 1rem;
+    margin: 15px;
+    margin-top: 50%;
+  }
+  .formRow {
+    padding: 0;
+    gap: 0;
+  }
+  .fileLabel {
+    width: 80%;
+  }
+}
+@media (max-width: 425px) {
+  .dropZone {
+    width: 80%;
+    height: 20%;
+  }
+  .modalOverlay {
+    overflow-y: auto;
+    gap: 20px;
+  }
+  .imagenSection {
+    flex: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .modalContent {
+    width: 100%;
+    padding: 1rem;
+    margin: 10px;
+    margin-top: 90%;
+  }
+  .formRow {
+    padding: 0;
+    gap: 0;
+  }
+  .fileLabel {
+    width: 80%;
+  }
 }
