--- a/src/Components/navbar/Navbar.module.css
+++ b/src/Components/navbar/Navbar.module.css
@@ -63,7 +63,8 @@
 }
 
 .dropdown:hover .dropdownContent {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Botón / Perfil */
@@ -83,7 +84,6 @@
 }
 /* 🔹 Tablets (pantallas medianas) */
 @media (max-width: 992px) {
-
   .menuIcon {
     width: 25px;
     display: block;
@@ -124,8 +124,8 @@
     position: static;
     box-shadow: none;
     padding: 0;
+    
   }
-
   .userSection {
     font-size: 12px;
     order: 3;
@@ -134,7 +134,6 @@
 
 /* 🔹 Celulares grandes */
 @media (max-width: 768px) {
-
   .menuIcon {
     width: 25px;
     display: block;
@@ -225,6 +224,7 @@
     display: flex;
   }
   .dropdownContent {
+    display: flex;
     flex-direction: column;
     position: static;
     box-shadow: none;
@@ -236,4 +236,3 @@
     order: 3;
   }
 }
-
