--- a/src/Pages/landing/politica_de_privacidad/Policity.module.css
+++ b/src/Pages/landing/politica_de_privacidad/Policity.module.css
@@ -1,75 +1,83 @@
-
 .containerPadre {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    gap: 36px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  gap: 36px;
 }
-.containerPadre p{
-    font-size: 18px;
-    width: 50%;
-    text-align:center;
-    margin-bottom: 40px;
+.containerPadre p {
+  font-size: 18px;
+  width: 50%;
+  text-align: center;
+  margin-bottom: 40px;
 }
-.containerPolitica{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    width: 70%;
-    padding: 20px 40px;
-    border-radius: 20px;
-    border: solid 1px #ccc;
-    font-size: 18px;
+.containerPolitica {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 70%;
+  padding: 20px 40px;
+  border-radius: 20px;
+  border: solid 1px #ccc;
+  font-size: 18px;
 }
-.containerPolitica p{
-    text-align: justify;
+.containerPolitica p {
+  text-align: justify;
 }
 .numero {
-    font-weight: bold;
-    font-size: 24px;
-    color: var(--white-color);
-    width: 50px;      
-    height: 50px;     
-    display: flex;    
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%; 
-    background-color: var(--primary-color);
+  font-weight: bold;
+  font-size: 24px;
+  color: var(--white-color);
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  background-color: var(--primary-color);
 }
 
-.headerPolitica{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-top: 20px;
+.headerPolitica {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
 }
-.lista{
-    font-size: 18px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0;
-    margin: 0;
-    gap: 40px;
-    text-align: justify;
-    list-style-position: inside; 
+.lista {
+  font-size: 18px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  gap: 40px;
+  text-align: justify;
+  list-style-position: inside;
 }
 .lista li::marker {
-    justify-content: center;
-    color: var(--primary-color); 
-    font-size: 2em; 
+  justify-content: center;
+  color: var(--primary-color);
+  font-size: 2em;
 }
 .politicaIzq,
-.politicaDer{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
-    margin: 0;
+.politicaDer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  margin: 0;
 }
 
 .politicaIzq li::marker,
 .politicaDer li::marker {
-    color: var(--primary-color);
-    font-size: 20px;
+  color: var(--primary-color);
+  font-size: 20px;
+}
+@media (max-width:425px) {
+    .numero{
+        width: 80px;
+    }
+    .politicaIzq{
+        padding: 0;
+    }
 }
