--- a/src/Pages/landing/politica_de_privacidad/Policity.module.css
+++ b/src/Pages/landing/politica_de_privacidad/Policity.module.css
@@ -74,10 +74,10 @@
   font-size: 20px;
 }
 @media (max-width:425px) {
-    .numero{
-        width: 80px;
-    }
     .politicaIzq{
         padding: 0;
+    }
+    .headerPolitica{
+      flex-direction: column;
     }
 }
