--- a/src/Pages/landing/terminos_y_condiciones/TermsAndConditions.module.css
+++ b/src/Pages/landing/terminos_y_condiciones/TermsAndConditions.module.css
@@ -12,7 +12,6 @@
 .containerFlex{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
 }
@@ -65,7 +64,19 @@
     width: 32px;
     height: 32px;
 }
+@media (max-width:768px) {
+    .containerFlex{
+        flex-direction: column;
+        align-items: center;
+    }
+    .containerPadre{
+        padding: 10px;
+    }
+}
 @media (max-width: 425px) {
+    .containerFlex{
+        flex-wrap: wrap;
+    }
     .containerPadre {
         box-sizing: border-box;
         width: 90%;
