styles: Making the FAQ page responsive

--- a/src/Pages/landing/preguntas_frecuentes/Questions_frecuenly.module.css
+++ b/src/Pages/landing/preguntas_frecuentes/Questions_frecuenly.module.css
@@ -82,3 +82,11 @@ a.linkWhatsapp {
 .footerBox button:hover {
 	background: #d91d38;
 }
+@media (max-width:425px) {
+	.questionsContainer{
+		padding: 1rem 1rem;	
+	}
+	.footerBox{
+		gap: 1px;
+	}
+}
