--- a/src/Pages/landing/Contacto/Contact.module.css
+++ b/src/Pages/landing/Contacto/Contact.module.css
@@ -1,6 +1,6 @@
 .containerCanales {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 20px;
