styles: changing the visual bug in the quotes

--- a/src/Pages/dashboard/cotizaciondetail/CotizacionDetalle.module.css
+++ b/src/Pages/dashboard/cotizaciondetail/CotizacionDetalle.module.css
@@ -9,7 +9,6 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
   align-content: stretch;
@@ -362,5 +361,8 @@
   }
   .addButton{
     height: auto;
+  }
+  .content{
+    flex-direction: column;
   }
 }
